--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "[5 rows x 292 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,17 +322,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.COMMODITY.replace({\"T Total\": \"Total\"}, inplace = True)\n",
-    "df.COUNTRY.replace({\"United States inc Puerto Rico\": \"United States\"}, inplace = True)"
+    "df.COUNTRY.replace({\"United States inc Puerto Rico\": \"United States\"}, inplace = True)\n",
+    "df.COUNTRY.replace({\"Extra EU 28 (Rest of World)\": \"Excl. EU 28 (Rest of World)\"}, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +412,7 @@
        "8561617     Total    Whole world 2021-01-01  3.151300e+10"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +512,7 @@
        "China        0 Food & live animals 1997-01-01    6530000.0"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +617,7 @@
        "                              1997-05-01  57800000.0"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,190 +625,6 @@
    "source": [
     "foo.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>imports</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1997-01-01</th>\n",
-       "      <td>8.292000e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997-02-01</th>\n",
-       "      <td>8.230000e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997-03-01</th>\n",
-       "      <td>8.649000e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997-04-01</th>\n",
-       "      <td>9.120000e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997-05-01</th>\n",
-       "      <td>8.229000e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>2.106300e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-10-01</th>\n",
-       "      <td>2.204900e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-11-01</th>\n",
-       "      <td>2.335000e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-01</th>\n",
-       "      <td>2.219000e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-01</th>\n",
-       "      <td>1.498300e+10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>289 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 imports\n",
-       "time                    \n",
-       "1997-01-01  8.292000e+09\n",
-       "1997-02-01  8.230000e+09\n",
-       "1997-03-01  8.649000e+09\n",
-       "1997-04-01  9.120000e+09\n",
-       "1997-05-01  8.229000e+09\n",
-       "...                  ...\n",
-       "2020-09-01  2.106300e+10\n",
-       "2020-10-01  2.204900e+10\n",
-       "2020-11-01  2.335000e+10\n",
-       "2020-12-01  2.219000e+10\n",
-       "2021-01-01  1.498300e+10\n",
-       "\n",
-       "[289 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "foo.loc[(\"Total EU(28)\", \"T Total\"),:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = [\"foo\", \"foobar\", \"chase\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test1 = test;\n",
-    "\n",
-    "test = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test[0] = test[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test.remove(\"chase\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test.insert(0,\"chase\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['chase', 'foo', 'foobar']"
-      ]
-     },
-     "execution_count": 187,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
