--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -29,7 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://www.ons.gov.uk/file?uri=/economy/nationalaccounts/balanceofpayments/datasets/uktradecountrybycommodityimports/current/countrybycommodityimports11032021144801.zip\"\n"
+    "#url = \"https://www.ons.gov.uk/file?uri=/economy/nationalaccounts/balanceofpayments/datasets/uktradecountrybycommodityimports/current/countrybycommodityimports11032021144801.zip\"\n",
+    "\n",
+    "\n",
+    "url = \"https://www.ons.gov.uk/file?uri=/economy/nationalaccounts/balanceofpayments/datasets/uktradecountrybycommodityimports/current/countrybycommodityimports.zip\""
    ]
   },
   {
@@ -40,11 +43,11 @@
    "source": [
     "r = requests.get(url) \n",
     "\n",
-    "brexit_Jan21 = zf.ZipFile(io.BytesIO(r.content))\n",
+    "brexit_FEB21 = zf.ZipFile(io.BytesIO(r.content))\n",
     "\n",
-    "brexit_Jan21.extractall(\".\\\\data\")\n",
+    "brexit_FEB21.extractall(\".\\\\data\")\n",
     "\n",
-    "filename = brexit_Jan21.namelist()"
+    "filename = brexit_FEB21.namelist()"
    ]
   },
   {
@@ -93,7 +96,6 @@
        "      <th>1997JUN</th>\n",
        "      <th>1997JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2020APR</th>\n",
        "      <th>2020MAY</th>\n",
        "      <th>2020JUN</th>\n",
        "      <th>2020JUL</th>\n",
@@ -103,6 +105,7 @@
        "      <th>2020NOV</th>\n",
        "      <th>2020DEC</th>\n",
        "      <th>2021JAN</th>\n",
+       "      <th>2021FEB</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -143,16 +146,16 @@
        "      <td>0.23</td>\n",
        "      <td>0.61</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.21</td>\n",
-       "      <td>8.72</td>\n",
+       "      <td>8.70</td>\n",
        "      <td>1.24</td>\n",
-       "      <td>1.45</td>\n",
-       "      <td>1.59</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>1.63</td>\n",
        "      <td>0.84</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>1.47</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>1.46</td>\n",
        "      <td>1.18</td>\n",
        "      <td>2.19</td>\n",
+       "      <td>1.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -170,13 +173,13 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.02</td>\n",
        "      <td>0.11</td>\n",
        "      <td>0.04</td>\n",
        "      <td>0.12</td>\n",
        "      <td>0.10</td>\n",
        "      <td>0.11</td>\n",
+       "      <td>0.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -191,9 +194,9 @@
        "      <td>0.01</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.06</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -228,7 +231,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 292 columns</p>\n",
+       "<p>5 rows × 293 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -239,28 +242,28 @@
        "3  0 Food & live animals     AG Antigua & Barbuda  IM Imports     0.02   \n",
        "4  0 Food & live animals              AI Anguilla  IM Imports     0.00   \n",
        "\n",
-       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020APR  \\\n",
+       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020MAY  \\\n",
        "0     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
-       "1     0.07     2.51    22.37     5.06     0.23     0.61  ...     1.21   \n",
+       "1     0.07     2.51    22.37     5.06     0.23     0.61  ...     8.70   \n",
        "2     0.07     0.00     0.23     0.05     0.05     0.00  ...     0.00   \n",
-       "3     0.12     0.00     0.00     0.04     0.01     0.00  ...     0.00   \n",
+       "3     0.12     0.00     0.00     0.04     0.01     0.00  ...     0.01   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
        "\n",
-       "   2020MAY  2020JUN  2020JUL  2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  \\\n",
+       "   2020JUN  2020JUL  2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  \\\n",
        "0     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
-       "1     8.72     1.24     1.45     1.59     0.84     1.01     1.47     1.18   \n",
-       "2     0.00     0.00     0.00     0.02     0.11     0.04     0.12     0.10   \n",
-       "3     0.01     0.06     0.00     0.00     0.00     0.00     0.00     0.00   \n",
+       "1     1.24     1.48     1.63     0.84     1.02     1.46     1.18     2.19   \n",
+       "2     0.00     0.00     0.02     0.11     0.04     0.12     0.10     0.11   \n",
+       "3     0.06     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "\n",
-       "   2021JAN  \n",
+       "   2021FEB  \n",
        "0     0.00  \n",
-       "1     2.19  \n",
-       "2     0.11  \n",
+       "1     1.21  \n",
+       "2     0.24  \n",
        "3     0.00  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 292 columns]"
+       "[5 rows x 293 columns]"
       ]
      },
      "execution_count": 5,
@@ -365,39 +368,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8561566</th>\n",
+       "      <th>8591191</th>\n",
        "      <td>Total</td>\n",
        "      <td>Russia</td>\n",
-       "      <td>2021-01-01</td>\n",
-       "      <td>5.620000e+08</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>1.213000e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8561572</th>\n",
+       "      <th>8591197</th>\n",
        "      <td>Total</td>\n",
        "      <td>Sweden</td>\n",
-       "      <td>2021-01-01</td>\n",
-       "      <td>4.300000e+08</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>4.770000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8561599</th>\n",
+       "      <th>8591224</th>\n",
        "      <td>Total</td>\n",
        "      <td>Turkey</td>\n",
-       "      <td>2021-01-01</td>\n",
-       "      <td>7.510000e+08</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>6.620000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8561607</th>\n",
+       "      <th>8591232</th>\n",
        "      <td>Total</td>\n",
        "      <td>United States</td>\n",
-       "      <td>2021-01-01</td>\n",
-       "      <td>2.333000e+09</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>3.708000e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8561617</th>\n",
+       "      <th>8591242</th>\n",
        "      <td>Total</td>\n",
        "      <td>Whole world</td>\n",
-       "      <td>2021-01-01</td>\n",
-       "      <td>3.151300e+10</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>3.867700e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -405,11 +408,11 @@
       ],
       "text/plain": [
        "        COMMODITY        COUNTRY       time       imports\n",
-       "8561566     Total         Russia 2021-01-01  5.620000e+08\n",
-       "8561572     Total         Sweden 2021-01-01  4.300000e+08\n",
-       "8561599     Total         Turkey 2021-01-01  7.510000e+08\n",
-       "8561607     Total  United States 2021-01-01  2.333000e+09\n",
-       "8561617     Total    Whole world 2021-01-01  3.151300e+10"
+       "8591191     Total         Russia 2021-02-01  1.213000e+09\n",
+       "8591197     Total         Sweden 2021-02-01  4.770000e+08\n",
+       "8591224     Total         Turkey 2021-02-01  6.620000e+08\n",
+       "8591232     Total  United States 2021-02-01  3.708000e+09\n",
+       "8591242     Total    Whole world 2021-02-01  3.867700e+10"
       ]
      },
      "execution_count": 11,
@@ -545,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -582,49 +585,56 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Belgium</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">0 Food &amp; live animals</th>\n",
-       "      <th>1997-01-01</th>\n",
-       "      <td>44340000.0</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Total</th>\n",
+       "      <th>2020-10-01</th>\n",
+       "      <td>4.246900e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1997-02-01</th>\n",
-       "      <td>44430000.0</td>\n",
+       "      <th>2020-11-01</th>\n",
+       "      <td>4.391400e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1997-03-01</th>\n",
-       "      <td>43820000.0</td>\n",
+       "      <th>2020-12-01</th>\n",
+       "      <td>4.074500e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1997-04-01</th>\n",
-       "      <td>58810000.0</td>\n",
+       "      <th>2021-01-01</th>\n",
+       "      <td>3.376800e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1997-05-01</th>\n",
-       "      <td>57800000.0</td>\n",
+       "      <th>2021-02-01</th>\n",
+       "      <td>3.867700e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             imports\n",
-       "COUNTRY COMMODITY             time                  \n",
-       "Belgium 0 Food & live animals 1997-01-01  44340000.0\n",
-       "                              1997-02-01  44430000.0\n",
-       "                              1997-03-01  43820000.0\n",
-       "                              1997-04-01  58810000.0\n",
-       "                              1997-05-01  57800000.0"
+       "                                       imports\n",
+       "COUNTRY     COMMODITY time                    \n",
+       "Whole world Total     2020-10-01  4.246900e+10\n",
+       "                      2020-11-01  4.391400e+10\n",
+       "                      2020-12-01  4.074500e+10\n",
+       "                      2021-01-01  3.376800e+10\n",
+       "                      2021-02-01  3.867700e+10"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "foo.head()"
+    "foo.tail()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
