--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -29,8 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#url = \"https://www.ons.gov.uk/file?uri=/economy/nationalaccounts/balanceofpayments/datasets/uktradecountrybycommodityimports/current/countrybycommodityimports11032021144801.zip\"\n",
-    "\n",
+    "#https://www.ons.gov.uk/economy/nationalaccounts/balanceofpayments/datasets/uktradecountrybycommodityimports\n",
     "\n",
     "url = \"https://www.ons.gov.uk/file?uri=/economy/nationalaccounts/balanceofpayments/datasets/uktradecountrybycommodityimports/current/countrybycommodityimports.zip\""
    ]
@@ -96,7 +95,6 @@
        "      <th>1997JUN</th>\n",
        "      <th>1997JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2020MAY</th>\n",
        "      <th>2020JUN</th>\n",
        "      <th>2020JUL</th>\n",
        "      <th>2020AUG</th>\n",
@@ -106,6 +104,7 @@
        "      <th>2020DEC</th>\n",
        "      <th>2021JAN</th>\n",
        "      <th>2021FEB</th>\n",
+       "      <th>2021MAR</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -131,7 +130,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -146,7 +145,6 @@
        "      <td>0.23</td>\n",
        "      <td>0.61</td>\n",
        "      <td>...</td>\n",
-       "      <td>8.70</td>\n",
        "      <td>1.24</td>\n",
        "      <td>1.48</td>\n",
        "      <td>1.63</td>\n",
@@ -155,7 +153,8 @@
        "      <td>1.46</td>\n",
        "      <td>1.18</td>\n",
        "      <td>2.19</td>\n",
-       "      <td>1.21</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>5.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -172,7 +171,6 @@
        "      <td>...</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.02</td>\n",
        "      <td>0.11</td>\n",
        "      <td>0.04</td>\n",
@@ -180,6 +178,7 @@
        "      <td>0.10</td>\n",
        "      <td>0.11</td>\n",
        "      <td>0.24</td>\n",
+       "      <td>0.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -194,8 +193,8 @@
        "      <td>0.01</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.01</td>\n",
        "      <td>0.06</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -231,7 +230,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 293 columns</p>\n",
+       "<p>5 rows × 294 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -242,28 +241,28 @@
        "3  0 Food & live animals     AG Antigua & Barbuda  IM Imports     0.02   \n",
        "4  0 Food & live animals              AI Anguilla  IM Imports     0.00   \n",
        "\n",
-       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020MAY  \\\n",
+       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020JUN  \\\n",
        "0     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
-       "1     0.07     2.51    22.37     5.06     0.23     0.61  ...     8.70   \n",
+       "1     0.07     2.51    22.37     5.06     0.23     0.61  ...     1.24   \n",
        "2     0.07     0.00     0.23     0.05     0.05     0.00  ...     0.00   \n",
-       "3     0.12     0.00     0.00     0.04     0.01     0.00  ...     0.01   \n",
+       "3     0.12     0.00     0.00     0.04     0.01     0.00  ...     0.06   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
        "\n",
-       "   2020JUN  2020JUL  2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  \\\n",
+       "   2020JUL  2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  \\\n",
        "0     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
-       "1     1.24     1.48     1.63     0.84     1.02     1.46     1.18     2.19   \n",
-       "2     0.00     0.00     0.02     0.11     0.04     0.12     0.10     0.11   \n",
-       "3     0.06     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
+       "1     1.48     1.63     0.84     1.02     1.46     1.18     2.19     1.20   \n",
+       "2     0.00     0.02     0.11     0.04     0.12     0.10     0.11     0.24   \n",
+       "3     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "\n",
-       "   2021FEB  \n",
-       "0     0.00  \n",
-       "1     1.21  \n",
-       "2     0.24  \n",
+       "   2021MAR  \n",
+       "0     0.07  \n",
+       "1     5.34  \n",
+       "2     0.10  \n",
        "3     0.00  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 293 columns]"
+       "[5 rows x 294 columns]"
       ]
      },
      "execution_count": 5,
@@ -368,39 +367,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8591191</th>\n",
+       "      <th>8620816</th>\n",
        "      <td>Total</td>\n",
        "      <td>Russia</td>\n",
-       "      <td>2021-02-01</td>\n",
-       "      <td>1.213000e+09</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>8.770000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8591197</th>\n",
+       "      <th>8620822</th>\n",
        "      <td>Total</td>\n",
        "      <td>Sweden</td>\n",
-       "      <td>2021-02-01</td>\n",
-       "      <td>4.770000e+08</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>6.020000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8591224</th>\n",
+       "      <th>8620849</th>\n",
        "      <td>Total</td>\n",
        "      <td>Turkey</td>\n",
-       "      <td>2021-02-01</td>\n",
-       "      <td>6.620000e+08</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>8.370000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8591232</th>\n",
+       "      <th>8620857</th>\n",
        "      <td>Total</td>\n",
        "      <td>United States</td>\n",
-       "      <td>2021-02-01</td>\n",
-       "      <td>3.708000e+09</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>3.242000e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8591242</th>\n",
+       "      <th>8620867</th>\n",
        "      <td>Total</td>\n",
        "      <td>Whole world</td>\n",
-       "      <td>2021-02-01</td>\n",
-       "      <td>3.867700e+10</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>4.061900e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -408,11 +407,11 @@
       ],
       "text/plain": [
        "        COMMODITY        COUNTRY       time       imports\n",
-       "8591191     Total         Russia 2021-02-01  1.213000e+09\n",
-       "8591197     Total         Sweden 2021-02-01  4.770000e+08\n",
-       "8591224     Total         Turkey 2021-02-01  6.620000e+08\n",
-       "8591232     Total  United States 2021-02-01  3.708000e+09\n",
-       "8591242     Total    Whole world 2021-02-01  3.867700e+10"
+       "8620816     Total         Russia 2021-03-01  8.770000e+08\n",
+       "8620822     Total         Sweden 2021-03-01  6.020000e+08\n",
+       "8620849     Total         Turkey 2021-03-01  8.370000e+08\n",
+       "8620857     Total  United States 2021-03-01  3.242000e+09\n",
+       "8620867     Total    Whole world 2021-03-01  4.061900e+10"
       ]
      },
      "execution_count": 11,
@@ -548,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -587,10 +586,6 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">Total</th>\n",
-       "      <th>2020-10-01</th>\n",
-       "      <td>4.246900e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2020-11-01</th>\n",
        "      <td>4.391400e+10</td>\n",
        "    </tr>\n",
@@ -600,11 +595,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-01-01</th>\n",
-       "      <td>3.376800e+10</td>\n",
+       "      <td>3.110900e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-02-01</th>\n",
-       "      <td>3.867700e+10</td>\n",
+       "      <td>3.268000e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01</th>\n",
+       "      <td>4.061900e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -613,14 +612,14 @@
       "text/plain": [
        "                                       imports\n",
        "COUNTRY     COMMODITY time                    \n",
-       "Whole world Total     2020-10-01  4.246900e+10\n",
-       "                      2020-11-01  4.391400e+10\n",
+       "Whole world Total     2020-11-01  4.391400e+10\n",
        "                      2020-12-01  4.074500e+10\n",
-       "                      2021-01-01  3.376800e+10\n",
-       "                      2021-02-01  3.867700e+10"
+       "                      2021-01-01  3.110900e+10\n",
+       "                      2021-02-01  3.268000e+10\n",
+       "                      2021-03-01  4.061900e+10"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
