--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "[5 rows x 294 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,97 +335,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 284,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>COMMODITY</th>\n",
-       "      <th>COUNTRY</th>\n",
-       "      <th>time</th>\n",
-       "      <th>imports</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8620816</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Russia</td>\n",
-       "      <td>2021-03-01</td>\n",
-       "      <td>8.770000e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8620822</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>2021-03-01</td>\n",
-       "      <td>6.020000e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8620849</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Turkey</td>\n",
-       "      <td>2021-03-01</td>\n",
-       "      <td>8.370000e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8620857</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>2021-03-01</td>\n",
-       "      <td>3.242000e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8620867</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Whole world</td>\n",
-       "      <td>2021-03-01</td>\n",
-       "      <td>4.061900e+10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        COMMODITY        COUNTRY       time       imports\n",
-       "8620816     Total         Russia 2021-03-01  8.770000e+08\n",
-       "8620822     Total         Sweden 2021-03-01  6.020000e+08\n",
-       "8620849     Total         Turkey 2021-03-01  8.370000e+08\n",
-       "8620857     Total  United States 2021-03-01  3.242000e+09\n",
-       "8620867     Total    Whole world 2021-03-01  4.061900e+10"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.tail()"
+    "grp = df.groupby([\"COUNTRY\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ex_metal_total(df):\n",
+    "        \n",
+    "    if not (df[df[\"COMMODITY\"] == \"9 Unspecified goods\"].empty):\n",
+    "                \n",
+    "        foo = pd.DataFrame([])\n",
+    "\n",
+    "        fooall = df[df[\"COMMODITY\"] == \"Total\"].set_index([\"time\"])[\"imports\"] \n",
+    "        \n",
+    "        foobar = df[df[\"COMMODITY\"] == \"9 Unspecified goods\"].set_index([\"time\"])[\"imports\"]\n",
+    "\n",
+    "        foo[\"imports\"] = fooall - foobar\n",
+    "    # Grab the total and then sbutract off the unspecified goods\n",
+    "    \n",
+    "        foo[\"COUNTRY\"] = df.COUNTRY.unique()[0]\n",
+    "    \n",
+    "        #print(df.COUNTRY.unique())\n",
+    "    \n",
+    "        foo[\"COMMODITY\"] = \"Total (ex. metals)\"\n",
+    "        \n",
+    "        foo.reset_index(inplace = True)\n",
+    "        \n",
+    "        foo[df.columns]\n",
+    "        \n",
+    "        df = df.append(foo)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = grp.apply(ex_metal_total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop([\"COUNTRY\"], axis = 1, inplace = True)\n",
+    "\n",
+    "df.reset_index(inplace = True)\n",
+    "\n",
+    "df.drop([\"level_1\"], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -471,34 +446,30 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Total EU(28)</th>\n",
-       "      <th>0 Food &amp; live animals</th>\n",
-       "      <th>1997-01-01</th>\n",
-       "      <td>673940000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Belgium</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Belgium</th>\n",
        "      <th>0 Food &amp; live animals</th>\n",
        "      <th>1997-01-01</th>\n",
        "      <td>44340000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Canada</th>\n",
-       "      <th>0 Food &amp; live animals</th>\n",
+       "      <th>00 Live animals</th>\n",
        "      <th>1997-01-01</th>\n",
-       "      <td>14320000.0</td>\n",
+       "      <td>70000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Switzerland</th>\n",
-       "      <th>0 Food &amp; live animals</th>\n",
+       "      <th>01 Meat &amp; meat preparations</th>\n",
        "      <th>1997-01-01</th>\n",
-       "      <td>4110000.0</td>\n",
+       "      <td>6000000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>China</th>\n",
-       "      <th>0 Food &amp; live animals</th>\n",
+       "      <th>02 Dairy products &amp; eggs</th>\n",
        "      <th>1997-01-01</th>\n",
-       "      <td>6530000.0</td>\n",
+       "      <td>5340000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03 Fish &amp; shellfish</th>\n",
+       "      <th>1997-01-01</th>\n",
+       "      <td>690000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -506,15 +477,15 @@
       ],
       "text/plain": [
        "                                                   imports\n",
-       "COUNTRY      COMMODITY             time                   \n",
-       "Total EU(28) 0 Food & live animals 1997-01-01  673940000.0\n",
-       "Belgium      0 Food & live animals 1997-01-01   44340000.0\n",
-       "Canada       0 Food & live animals 1997-01-01   14320000.0\n",
-       "Switzerland  0 Food & live animals 1997-01-01    4110000.0\n",
-       "China        0 Food & live animals 1997-01-01    6530000.0"
+       "COUNTRY COMMODITY                   time                  \n",
+       "Belgium 0 Food & live animals       1997-01-01  44340000.0\n",
+       "        00 Live animals             1997-01-01     70000.0\n",
+       "        01 Meat & meat preparations 1997-01-01   6000000.0\n",
+       "        02 Dairy products & eggs    1997-01-01   5340000.0\n",
+       "        03 Fish & shellfish         1997-01-01    690000.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,96 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
     "file = \".\\\\data\"+ \"\\\\UK-imports.parquet\"\n",
     "\n",
     "foo = pq.read_table(file).to_pandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>imports</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COUNTRY</th>\n",
-       "      <th>COMMODITY</th>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Total</th>\n",
-       "      <th>2020-11-01</th>\n",
-       "      <td>4.391400e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-01</th>\n",
-       "      <td>4.074500e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-01</th>\n",
-       "      <td>3.110900e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-01</th>\n",
-       "      <td>3.268000e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-01</th>\n",
-       "      <td>4.061900e+10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                       imports\n",
-       "COUNTRY     COMMODITY time                    \n",
-       "Whole world Total     2020-11-01  4.391400e+10\n",
-       "                      2020-12-01  4.074500e+10\n",
-       "                      2021-01-01  3.110900e+10\n",
-       "                      2021-02-01  3.268000e+10\n",
-       "                      2021-03-01  4.061900e+10"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "foo.tail()"
    ]
   },
   {
@@ -652,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
